--- a/SVU/SVU.Web.UI/wwwroot/css/custom/image.css
+++ b/SVU/SVU.Web.UI/wwwroot/css/custom/image.css
@@ -1,6 +1,15 @@
 ﻿/*
     Custom images
 */
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+    img {
+        width: 100% !important;
+    }
+}
+
 img {
     width: 30vw;
+    border:1px solid white;
+    border-radius : 10px;
 }
