Added CRUD operations for blogs

--- a/SVU/SVU.Web.UI/Views/Homework/Health.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/Health.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container slide-in-right ">
     <p>
-        Welcome to our super health <i class="fa fa-heart text-danger"></i> website where we have <a href="#">Blogs</a> for all kind of health issues.
+        Welcome to our super health <i class="fa fa-heart text-danger puls"></i> website where we have <a href="#">Blogs</a> for all kind of health issues.
         <br />
         You can also send us a <a href="#">Request</a> and with our team of best doctores will replay back to you. <i class="fa fa-smile text-primary"></i>
     </p>
@@ -55,7 +55,7 @@
     }
     else
     {
-        <partial name="./Health/HealthControlPanel.cshtml"/>
+        <partial name="./Health/HealthControlPanel.cshtml" />
     }
 
 
