--- a/SVU/SVU.Web.UI/Views/Homework/Health/HealthControlPanel.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/Health/HealthControlPanel.cshtml
@@ -15,118 +15,65 @@
     <div>
         <div class="input-group my-2">
             <div class="input-group-prepend">
-                <span class="input-group-text">Title : </span>
+                <span class="input-group-text">Title</span>
             </div>
-            <input class="form-control" type="text" />
+            <input class="form-control" type="text" id="blog_title" />
         </div>
         <div class="input-group my-2">
             <div class="input-group-prepend">
-                <span class="input-group-text">Thumnbnnail image :</span>
+                <span class="input-group-text">Thumnbnail image</span>
+
             </div>
-            <input class="form-control" type="file" />
+            <input class="form-control" type="file" id="blog_thumbnail_file" accept=".png, .jpg, .gif" onchange="ReadOneImageFile(this,'png,jpg,gif','thumbnail_loading_status',setImageEncoding)" />
+            <div class="ml-1" id="thumbnail_loading_status">
+                <partial name="Compontents/LoaderStatusComponent" />
+            </div>
         </div>
         <div class="input-group my-2">
             <div class="input-group-prepend">
-                <span class="input-group-text">Content :</span>
+                <span class="input-group-text">Content</span>
             </div>
-            <textarea class="form-control"></textarea>
+            <textarea class="form-control" style="min-height:600px" id="blog_content"></textarea>
         </div>
         <div class="input-group my-2">
             <div class="input-group-prepend">
-                <span class="input-group-text">Note :</span>
+                <span class="input-group-text">Note</span>
             </div>
-            <textarea class="form-control"></textarea>
+            <textarea class="form-control" style="min-height:100px" id="blog_note"></textarea>
         </div>
 
         <div class="btn-group">
             <button class="btn btn-success" onclick="AddEditBlog(true)">Add</button>
-            <button class="btn btn-warning" onclick="AddEditBlog(false)">Edit</button>
+            <button class="btn btn-warning" id="edit_blog_data_button" onclick="AddEditBlog(false)" disabled>Edit</button>
             <button class="btn btn-primary">Preview</button>
         </div>
     </div>
 </div>
 
 <div class="mt-5" id="blog_list_part">
-    <h4>Blogs <i class="fa fa-paperclip"></i></h4>
+    <h4>
+        Blogs <i class="fa fa-paperclip"></i>
+        <span class="ml-5 text-primary " id="blog_countent_status_loading"><i class="fa fa-spinner  fa-spin"></i> Loading..</span>
+        <span class="ml-5 text-warning collapse" id="blog_countent_status_noContent">Nothing found <i class="fa fa-sad-tear"></i>, lets create some blogs!</span>
+    </h4>
     <hr />
+
     <table class="table table-hover lg-table">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Title</th>
-                <th scope="col">Image</th>
                 <th scope="col">Content</th>
                 <th scope="col">Note</th>
+                <th scope="col">Visits</th>
+                <th scope="col" width="10%">Creation date</th>
+                <th scope="col" width="10%">Last updated date</th>
+                <th scope="col" width="5%"></th>
+                <th scope="col" width="5%"></th>
             </tr>
         </thead>
-        <tbody>
-            @for (int i = 0; i < 5; i++)
-            {
-                <tr>
-                    <td>Title @i</td>
-                    <td>Image @i</td>
-                    <td>Content @i</td>
-                    <td>Note @i</td>
-                </tr>
-            }
-        </tbody>
+        <tbody id="blogs_table_body_part"></tbody>
     </table>
 
 </div>
 
-<script>
-    var startBlogIndex = 0;
-    var countBlogs = 5;
-    $(function () {
-        //Start loading the first batch of the blogs
-        loadBlogs(startBlogIndex, countBlogs);
-    })
-
-    //
-    //Loads the blogs table
-    //  start: used for pagination
-    //  count : get a count number of blogs after the start index
-    //
-    function loadBlogs(start, count) {
-        $.ajax('/AWPHealth/Blogs',
-            {
-                method: 'GET',
-                data: {
-                    start,
-                    count
-                },
-                success: function (res) {
-                    console.log(res)
-
-                    //Just move the start to the end of the count
-                    startBlogIndex += count;
-                    console.log("start", start);
-                },
-                error: function (err) {
-                    console.log(err)
-                }
-            })
-    }
-
-    //
-    //Adds or edits a blog
-    //  isAdd : a flag to check if the operation is an add or edit
-    //
-    function AddEditBlog(isAdd) {
-        $.ajax('/AWPHealth/Blog',
-            {
-                method: 'POST',
-                data: {
-                    //TODO: bind the data
-                    Title : "Title"
-                },
-                success: function (res) {
-                    console.log("All good", res)
-                },
-                error: function (err) {
-                    console.log(err)
-                }
-            })
-    }
-
-
-</script>
+<script src="~/js/HealthControlPanel.js"></script>
