Completed blog view

--- a/SVU/SVU.Web.UI/Views/Homework/Health.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/Health.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SVU.Web.UI.ViewModels.Account.HomeworkAWPAccountViewModel
 @{
-    ViewBag.title = "ADM heart classification";
+    ViewBag.title = "AWP health portal";
 }
 <!--Part Title-->
 <div class="container text-center slide-in-left pt-2">
