--- a/SVU/SVU.Web.UI/Views/_ViewImports.cshtml
+++ b/SVU/SVU.Web.UI/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using SVU.Web.UI.Models.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
