--- a/SVU/SVU.Web.UI/wwwroot/css/custom/table.css
+++ b/SVU/SVU.Web.UI/wwwroot/css/custom/table.css
@@ -1,9 +1,18 @@
 ﻿/*
     Custom tables
 */
+
+.table-cell-overflow{
+    max-width :0px;
+    overflow : hidden;
+    text-overflow : ellipsis;
+    white-space : nowrap;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     .lg-table{
         overflow-x : auto;
         display : block;
     }
 }
+
