--- a/SVU/SVU.Web.UI/Views/Homework/Health/HealthControlPanel.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/Health/HealthControlPanel.cshtml
@@ -21,7 +21,7 @@
         </div>
         <div class="input-group my-2">
             <div class="input-group-prepend">
-                <span class="input-group-text">Thumnbnail image</span>
+                <span class="input-group-text">Thumnbnail image (20KB)</span>
 
             </div>
             <input class="form-control" type="file" id="blog_thumbnail_file" accept=".png, .jpg,.jpeg, .gif" onchange="ReadOneImageFile(this,'png,jpg,jpeg,gif','thumbnail_loading_status',setImageEncoding)" />
