--- a/SVU/SVU.Web.UI/Views/Homework/Health/HealthControlPanel.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/Health/HealthControlPanel.cshtml
@@ -21,6 +21,13 @@
         </div>
         <div class="input-group my-2">
             <div class="input-group-prepend">
+                <span class="input-group-text">Preview text</span>
+            </div>
+            <input class="form-control" type="text" id="blog_preview_text" />
+        </div>
+
+        <div class="input-group my-2">
+            <div class="input-group-prepend">
                 <span class="input-group-text">Thumnbnail image (20KB)</span>
 
             </div>
@@ -65,8 +72,7 @@
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Title</th>
-                <th scope="col">Content</th>
-                <th scope="col">Note</th>
+                <th scope="col">Preview text</th>
                 <th scope="col">Visits</th>
                 <th scope="col" width="auto">Creation date</th>
                 <th scope="col" width="auto">Last updated date</th>
