--- a/SVU/SVU.Web.UI/Views/Shared/Components/LoaderStatusComponent.cshtml
+++ b/SVU/SVU.Web.UI/Views/Shared/Components/LoaderStatusComponent.cshtml
@@ -3,10 +3,10 @@
                                               => Fail icon
 *@
 
-<div class="spinner-border text-primary collapse" role="status">
+<div class="spinner-border text-primary collapse thumbnail_status" role="status">
     <span class="sr-only">Loadding thumbnail file...</span>
 </div>
-<i class="fa fa-check-circle text-success fa-2x collapse" id=""></i>
-<i class="fa fa-times-circle text-danger fa-2x collapse"></i>
+<i class="fa fa-check-circle text-success fa-2x collapse thumbnail_status" ></i>
+<i class="fa fa-times-circle text-danger fa-2x collapse thumbnail_status"></i>
 
 
