--- a/SVU/SVU.Web.UI/Views/_ViewImports.cshtml
+++ b/SVU/SVU.Web.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SVU.Web.UI.Models.TagHelpers
 @using SVU.Web.UI.ViewModels.Health
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "BotDetect.Web.Mvc.CaptchaTagHelper, BotDetect.Web.Mvc"
