updated text values

--- a/SVU/SVU.Web.UI/Views/Home/Index.cshtml
+++ b/SVU/SVU.Web.UI/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home page";
+    ViewBag.Title = "Home";
 }
 
 <div class="container-fluid bg-light container-full-hight p-md-5" id="about">
