--- a/SVU/SVU.Web.UI/Views/Shared/_Layout.cshtml
+++ b/SVU/SVU.Web.UI/Views/Shared/_Layout.cshtml
@@ -57,7 +57,10 @@
                     </li>
                 </ul>
             </div>
-
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a class="btn btn-outline-warning my-2 my-sm-0" href="/awpaccount/Logout">Logout</a>
+            }
         </nav>
 
         <div>
