Updated project developers names

--- a/SVU/SVU.Web.UI/Views/Homework/Health.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/Health.cshtml
@@ -67,10 +67,10 @@
 <div class="container text-center slide-in-left mt-2 p-5 bg-light">
     <h1>Developers <i class="fa fa-laptop-code"></i></h1>
     <hr />
-    <h4>Saria Houloubi</h4>
-    <h4>Mohammed Shaker</h4>
-    <h4>Bakr Hawari</h4>
-    <h4>Ibrahim Moharam</h4>
+    <h4>mohammad_saria_128837</h4>
+    <h4>mohammed_131575</h4>
+    <h4>bakr_abdulrahman_131725</h4>
+    <h4>Ibrahim_131484</h4>
     <hr />
 
 </div>
