--- a/SVU/SVU.Web.UI/Views/Homework/HeartDisease.cshtml
+++ b/SVU/SVU.Web.UI/Views/Homework/HeartDisease.cshtml
@@ -231,7 +231,7 @@
                     $("#ssas_bayes")[0].innerText = values;
                 }
                 else
-                    $("#ssas_id3")[0].innerText = data[0].play;
+                    $("#ssas_id3")[0].innerText = data[0].disease;
 
             },
             error: function (err) {
