--- a/SVU/SVU.Web.UI/Views/_ViewImports.cshtml
+++ b/SVU/SVU.Web.UI/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SVU.Web.UI.Models.TagHelpers
 @using SVU.Web.UI.ViewModels.Health
+@using SVU.Web.UI.ViewModels.Shared
 @using SVU.Shared.Static
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper "BotDetect.Web.Mvc.CaptchaTagHelper, BotDetect.Web.Mvc"
